Fix demo dashboard server error and add authentication system
- Fixed syntax error in server/index.ts (extra closing brace)
- Added authentication requirements to protected endpoints
- Added user authentication UI with login/logout functionality
- Created comprehensive demo login page with registration
- Added demo authentication guide documentation
- Updated landing page links to route through login

--- a/src/demo/UPPLandingPage.html
+++ b/src/demo/UPPLandingPage.html
@@ -526,7 +526,7 @@
                 The Universal Payment Protocol enables smartphones, smart TVs, IoT devices, gaming consoles, and voice assistants to process payments seamlessly. Experience the future of commerce where every internet-connected device becomes a payment gateway.
             </div>
             <div class="cta-buttons">
-                <a href="DemoDashboard.html" class="cta-btn cta-primary">
+                <a href="/demo-login" class="cta-btn cta-primary">
                     🚀 Launch Live Demo
                 </a>
                 <a href="#features" class="cta-btn cta-secondary">
@@ -705,7 +705,7 @@
                 <p style="margin-bottom: 30px;">
                     Watch as smartphones, smart TVs, IoT devices, gaming consoles, and voice assistants process real payments simultaneously. Our demo showcases the power and versatility of the Universal Payment Protocol.
                 </p>
-                <a href="DemoDashboard.html" class="cta-btn cta-primary">
+                <a href="/demo-login" class="cta-btn cta-primary">
                     🎯 Launch Interactive Demo
                 </a>
             </div>
@@ -759,7 +759,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="DemoDashboard.html" class="footer-link">Live Demo</a>
+                <a href="/demo-login" class="footer-link">Live Demo</a>
                 <a href="#" class="footer-link">Documentation</a>
                 <a href="#" class="footer-link">API Reference</a>
                 <a href="#" class="footer-link">Support</a>
